force-app/main/default/objects/Rice_Order__c/Rice_Order__c.object-meta.xml
<CustomObject>
    <description>Tracks simple rice shopping orders for the sample app.</description>
    <label>Rice Order</label>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rice Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>