force-app/main/default/objects/Rice_Order__c/fields/Customer_Balance__c.field-meta.xml
<CustomField>
    <fullName>Customer_Balance__c</fullName>
    <label>Customer Balance</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>