force-app/main/default/objects/Rice_Order__c/fields/Customer_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Confirmation__c</fullName>
    <label>Customer Confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>