force-app/main/default/objects/Rice_Order__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <label>Customer Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>