force-app/main/default/objects/Rice_Order__c/fields/Minimum_Balance__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Balance__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Minimum Balance</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>