force-app/main/default/objects/Rice_Order__c/fields/Order_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Order_Quantity__c</fullName>
    <label>Order Quantity</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>