force-app/main/default/objects/Rice_Order__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>