force-app/main/default/objects/Rice_Order__c/fields/Remaining_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Quantity__c</fullName>
    <label>Remaining Quantity</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>