force-app/main/default/objects/Rice_Order__c/fields/Rice_Type__c.field-meta.xml
<CustomField>
    <fullName>Rice_Type__c</fullName>
    <label>Rice Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basmati</fullName>
                <default>true</default>
                <label>Basmati</label>
            </value>
            <value>
                <fullName>Jasmine</fullName>
            </value>
            <value>
                <fullName>Brown</fullName>
            </value>
            <value>
                <fullName>Wild</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>