force-app/main/default/objects/Rice_Order__c/fields/Route_Plan__c.field-meta.xml
<CustomField>
    <fullName>Route_Plan__c</fullName>
    <label>Route Plan</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>