force-app/main/default/objects/Rice_Order__c/fields/Transport_Plan__c.field-meta.xml
<CustomField>
    <fullName>Transport_Plan__c</fullName>
    <label>Transport Plan</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>