force-app/main/default/objects/Rice_Order__c/fields/Vendor_Allocation_Status__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Allocation_Status__c</fullName>
    <label>Vendor Allocation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Allocated</fullName>
                <default>true</default>
                <label>Not Allocated</label>
            </value>
            <value>
                <fullName>Partially Allocated</fullName>
            </value>
            <value>
                <fullName>Fully Allocated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>